# PerfectFrameAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cli.py  config.py  config.yaml  docker-compose.yaml  pyproject.toml  start.py
examples/: README.md  before_after_comparison.md  metadata_example.json  quick_start.sh
extractor_service/: Dockerfile  main.py  requirements.txt
extractor_service/app/: dependencies.py  extractor_manager.py  extractors.py  image_evaluators.py  image_processors.py  perf.py  schemas.py  video_processors.py
output_cansu/: image_2efb85d1-f563-4074-a200-2f9a319ef0c5.json  image_7bf8d681-53ff-4b5b-bf34-773314ab1b2d.json  image_7fff06fa-e24a-426d-ad31-58fbc2365d23.json  image_fe5ce01c-f6b5-4a7a-9733-b391bdb4014c.json
output_cansu_yolo_require/: image_97515be0-cb0d-473c-8129-50cf8166d5de.json
results/: EVALUATION_REPORT.md  comparison.md  edge_cases.md  gpu_stats.csv  performance.json  quality_grid.html
results/baseline/: image_0bbab919-8088-45de-a508-af97604ce3f1.json  image_2a1b2815-c1c1-44ac-9082-567633688809.json  image_2d5cc920-5cc2-41c2-9e5b-ec5f63cf55b6.json  image_2f3f02c4-317e-4f2e-88a1-dabe7fe029e3.json  image_32844ab5-c63e-49b0-bfc9-bc395cc84f20.json  image_5986c2c9-e7fd-4786-ba22-1afe071dfbc6.json  image_66051ea2-2030-42f2-8333-8c0f28104fa3.json  image_6babe9a5-6be0-4f4e-b9db-123474da434a.json  image_6ee853f7-a41a-4784-8111-19ba68e924bb.json  image_89b14e90-5f27-4071-9a4a-0d98fa769ef1.json  (+4 more)
service_manager/: docker_manager.py  service_initializer.py
tests/: common.py  test_person_mode_e2e.py  validate_metadata.py
(+74 files in other folders)
