[project]
name = "PerfectFrameAI"
version = "2.3.3"
description = "AI tool for finding the most aesthetic frames in a video. ðŸŽžï¸âžœðŸ–¼ï¸"
authors = [
    {name = "BartÅ‚omiej Flis", email = "Bartekdawidflis@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "requests==2.32.2",
    "tensorflow==2.16.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
]

test = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "pytest-order>=1.2.1",
    "docker>=7.1.0",
]
