[project]
name = "PerfectFrameAI"
version = "2.4.0"
description = "AI tool for finding the most aesthetic frames in a video. ðŸŽžï¸âžœðŸ–¼ï¸"
authors = [
    {name = "BartÅ‚omiej Flis", email = "Bartekdawidflis@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "opencv-python==4.11.0.86",
    "requests==2.32.2",
    "tensorflow==2.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pre-commit>=4.0.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "pytest-order>=1.2.1",
    "docker>=7.1.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
per-file-ignores = {"**/conftest.py"=["F401"]}
